@@ -24,7 +24,6 @@ gem 'nori'
 gem 'gchartrb', :require => 'google_chart'
 gem 'diff-lcs', :require => 'diff/lcs'
 gem 'alignment'
-gem 'redcarpet', '~> 2.3.0'
 gem 'differ'
 gem 'iso-codes', :require => 'iso_codes'
 gem 'ruby-sfst', :require => 'sfst'
