@@ -629,55 +629,6 @@ h3
 .centered-images
   text-align: center
 
-////////////////////////////////////////////////////////////////
-// Documentation blocks
-////////////////////////////////////////////////////////////////
-
-.markdown
-  margin: auto
-  font-size: 100%
-  line-height: 140%
-  pre, p
-    margin-top: 1em
-    margin-bottom: 1em
-  img
-    margin-top: 1em
-    margin-bottom: 1em
-    display: block
-    margin-left: auto
-    margin-right: auto
-  code
-    font-family: Courier, monospace
-  pre
-    border: 1px dotted gray
-    background-color: #ececec
-    color: #111111
-    padding: 0.5em
-    margin-left: 2em
-  h1, h2, h3, h4, h5
-    font-family: verdana
-    font-weight: bold
-  h1
-    font-size: 150%
-  h2
-    font-size: 130%
-  h3
-    font-size: 110%
-  h4, h5
-    font-size: 100%
-    font-style: italic
-  h1.title
-    font-size: 200%
-    font-weight: bold
-    padding-top: 0.2em
-    padding-bottom: 0.2em
-    text-align: left
-    border: none
-  dt code
-    font-weight: bold
-  dd p
-    margin-top: 0
-
 .highlight
   color:       $selected
   font-weight: bold
