@@ -1,18 +1,0 @@
-%h1 Downloadable data files
-
-%p
-  These data files are generated automatically.
-  If a file is unavailable, the file has not yet been generated. All data files are released under the
-  != link_to "CC BY-NC-SA 3.0", "http://creativecommons.org/licenses/by-nc-sa/3.0/us/"
-  license. Please make sure that you are familiar with the terms of this license before downloading any of the files below.
-
-%h2 Data files
-
-%table
-  - Source.all.each do |s|
-    %tr
-      %td= s.author_and_title
-      - if Proiel::export_file_available?(s.human_readable_id)
-        %td!= link_to 'Download', Proiel::export_file_url(s.human_readable_id)
-      - else
-        %td= 'Unavailable'
